<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_background"
    tools:context="com.philips.qrscanner.HomeActivity">

    <!-- Data Table starts -->
    <LinearLayout
        android:id="@+id/ll_data_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!-- Scan New Card -->
        <LinearLayout
            android:id="@+id/ll_scan_qr_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_list_item_height"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_margin="@dimen/home_list_margin"
            android:padding="@dimen/home_list_padding"
            android:orientation="horizontal"
            android:onClick="scanNow">
            <!-- scanner -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/qr_scanner"/>
            </LinearLayout>
            <!-- Text -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scan_new_card"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="@dimen/home_list_text_size"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_margin="@dimen/home_list_margin"
            android:padding="@dimen/home_list_padding"
            android:visibility="gone"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/ip_address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingLeft="10dp"
                android:hint="IP Address"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/save_ip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_save"
                android:layout_gravity="end"/>
        </LinearLayout>
        <!-- View Saved Cards -->
    </LinearLayout>
    <!-- Scanned Data-->
    <LinearLayout
        android:id="@+id/ll_scanned_data_wrapper"
        android:layout_below="@+id/ll_data_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_margin="@dimen/scanned_data_margin"
            android:padding="@dimen/scanned_data_padding"
            android:theme="@style/AppTheme.scannedData"
            android:orientation="vertical">
            <!-- NAME -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_name"/>
                <TextView
                    android:id="@+id/tv_sd_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- GENDER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_gender"/>
                <TextView
                    android:id="@+id/tv_sd_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- DATE OF BIRTH -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_dob"/>
                <TextView
                    android:id="@+id/tv_sd_dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- GNAME -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_gname"/>
                <TextView
                    android:id="@+id/tv_sd_gname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- CARE OF -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_co"/>
                <TextView
                    android:id="@+id/tv_sd_co"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- HOUSE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_house"/>
                <TextView
                    android:id="@+id/tv_sd_house"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- STREET -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_st"/>
                <TextView
                    android:id="@+id/tv_sd_st"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- LM -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_lm"/>
                <TextView
                    android:id="@+id/tv_sd_lm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- LOC -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_loc"/>
                <TextView
                    android:id="@+id/tv_sd_loc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- VILLAGE TEHSIL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_vtc"/>
                <TextView
                    android:id="@+id/tv_sd_vtc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- POST OFFICE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_po"/>
                <TextView
                    android:id="@+id/tv_sd_po"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- DISTRICT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_dist"/>
                <TextView
                    android:id="@+id/tv_sd_dist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- SUB-DISTRICT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_sub_dist"/>
                <TextView
                    android:id="@+id/tv_sd_subdist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- STATE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_state"/>
                <TextView
                    android:id="@+id/tv_sd_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- POSTAL CODE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.scannedData.item"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_pc"/>
                <TextView
                    android:id="@+id/tv_sd_pc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_scanned_data_wrapper"
        android:layout_marginTop="@dimen/action_button_margin_top"
        android:orientation="horizontal"
        android:padding="@dimen/action_button_padding"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:background="@color/action_save_background"
            android:onClick="postData"
            android:text="@string/label_send"
            android:theme="@style/AppTheme.actionButton" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:theme="@style/AppTheme.actionButton" />

        <TextView
            android:id="@+id/tv_cancel_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:background="@color/action_cancel_background"
            android:onClick="showHome"
            android:text="@string/label_cancel"
            android:theme="@style/AppTheme.actionButton" />
    </LinearLayout>
</RelativeLayout>
